--- a/03-sysadmin-04-os/3-4.md
+++ b/03-sysadmin-04-os/3-4.md
@@ -45,7 +45,9 @@ Aug 08 14:22:00 vagrant node_exporter[615]: ts=2022-08-08T14:22:00.567Z caller=n
 Aug 08 14:22:00 vagrant node_exporter[615]: ts=2022-08-08T14:22:00.567Z caller=node_exporter.go:199 level=info msg="Listening on" address=:9100
 Aug 08 14:22:00 vagrant node_exporter[615]: ts=2022-08-08T14:22:00.567Z caller=tls_config.go:195 level=info msg="TLS is disabled." http2=false
 ```
-
+### Доработка 
+1. Для решения данной задачи требуется завести дополнительный параметр для запуска службы, в который нужно передать опцию в конфиге сервиса ExecStart=/etc/default/node_exporter $LOAD_PARAM="--требуемый параметр"
+Запуск будет выполнен с заданым параметром
 ## 2. Ознакомьтесь с опциями node_exporter и выводом /metrics по-умолчанию. Приведите несколько опций, которые вы бы выбрали для базового мониторинга хоста по CPU, памяти, диску и сети.
 ### Решение:
 Для просмотра метрик можно использовать команду `curl localhost:9100/metrics`
