--- a/05-virt-03-docker/5_3.md
+++ b/05-virt-03-docker/5_3.md
@@ -92,3 +92,74 @@ b45078e74ec9: Pushed
 v2.0: digest: sha256:ef24d9d0db99023257f90878c059a459db5888c679c5e04dd71452d5f356c55a size: 1777
 
 ````
+## Задача 2 
+Посмотрите на сценарий ниже и ответьте на вопрос:
+"Подходит ли в этом сценарии использование Docker контейнеров или лучше подойдет виртуальная машина, физическая машина? Может быть возможны разные варианты?"
+
+Детально опишите и обоснуйте свой выбор.
+
+--
+
+Сценарий:
+
+- Высоконагруженное монолитное java веб-приложение;
+Высоконагруженное монолитное java веб-приложение - для облегчения миграции можно использовать docker или виртуальные машины.
+Учитывая, что приложение монолитное, его также можно разместить на физике.
+- Nodejs веб-приложение;
+Docker, т.к. снижает трудозатраты на деплой приложения и организацию микросервисной архитектуры
+- Мобильное приложение c версиями для Android и iOS;
+виртуальная машина или физическое оборудование т.к. контейнеризация не подходит для работы с UI
+- Шина данных на базе Apache Kafka;
+Виртуальная машина - контенеризация не пригодна.
+- Elasticsearch кластер для реализации логирования продуктивного веб-приложения - три ноды elasticsearch, два logstash и две ноды kibana;
+исходя из документации для размещения требуется использование выделенных хостов (виртуальных машин, контейнеров) 
+т.к. некоторые функции Elasticsearch подразумевают что это единственное ресурсоёмкое приложение на хосте.
+- Мониторинг-стек на базе Prometheus и Grafana;
+контейнер или виртуальную машину для облегчения развёртывания и масштабирования.
+- MongoDB, как основное хранилище данных для java-приложения;
+Можно выбрать 2 варианта: 1. Виртуалка, если не требует требования по нагрузке и БД не хранятся в системе контейнеризации. 
+Физическая машина, прекрасно справится, но повышает затраты.
+- Gitlab сервер для реализации CI/CD процессов и приватный (закрытый) Docker Registry.
+Docker Registry - Docker Registry по умолчанию поставляется в контейнере, 
+- Gitlab север исходя из документации может быть размещён всеми тремя способами.
+
+## Задача 3
+````
+ops@ops-Lenovo-G780:~$ docker pull centos
+Using default tag: latest
+latest: Pulling from library/centos
+a1d0c7532777: Pull complete 
+Digest: sha256:a27fd8080b517143cbbbab9dfb7c8571c40d67d534bbdee55bd6c473f432b177
+Status: Downloaded newer image for centos:latest
+docker.io/library/centos:latest
+````
+````
+ops@ops-Lenovo-G780:~$ sudo docker run -it -d -v /data:/data --name centos centos
+d630248dd9736b1d9539b036d6539907303f674a3c7f5f9ca3d6dfaddd91a6b8
+ops@ops-Lenovo-G780:~$ docker exec -it centos bash
+[root@d630248dd973 /]# touch /data/1.txt
+[root@d630248dd973 /]# exit
+exit
+ops@ops-Lenovo-G780:~$ sudo touch /data/1.txt
+````
+
+````
+ops@ops-Lenovo-G780:~$ sudo docker pull debian 
+Using default tag: latest
+latest: Pulling from library/debian
+23858da423a6: Pull complete 
+Digest: sha256:3e82b1af33607aebaeb3641b75d6e80fd28d36e17993ef13708e9493e30e8ff9
+Status: Downloaded newer image for debian:latest
+docker.io/library/debian:latest
+````
+
+````
+ops@ops-Lenovo-G780:~$ sudo docker run -it -d -v /data:/data --name debian debian
+aa72cad06576fa1167aaae0762e9a5792e7c606fb2e42994ad77bb1ac138222b
+````
+
+````
+ops@ops-Lenovo-G780:~$ sudo docker exec -it debian bash
+root@aa72cad06576:/# ls data/
+1.txt
+````
