--- a/05-virt-05-docker-swarm/HW5_5.md
+++ b/05-virt-05-docker-swarm/HW5_5.md
@@ -46,7 +46,7 @@ docker node ls
 
 ### Решение
 
-![](/home/ops/PycharmProjects/devops-netology/05-virt-05-docker-swarm/img/2022-10-04_02-13.png)
+![](img/2022-10-04_02-13.png)
 
 ## Задача 3
 
@@ -57,11 +57,11 @@ docker node ls
 docker service ls
 ```
 ### Решение 
-![](/home/ops/PycharmProjects/devops-netology/05-virt-05-docker-swarm/img/2022-10-04_02-13.png)
+![](img/2022-10-04_02-13.png)
 
-![](/home/ops/PycharmProjects/devops-netology/05-virt-05-docker-swarm/img/2022-10-04_02-14.png)
+![](img/2022-10-04_02-14.png)
 
-![](/home/ops/PycharmProjects/devops-netology/05-virt-05-docker-swarm/img/2022-10-04_02-14_1.png)
+![](img/2022-10-04_02-14_1.png)
 ## Задача 4 (*)
 
 Выполнить на лидере Docker Swarm кластера команду (указанную ниже) и дать письменное описание её функционала, что она делает и зачем она нужна:
